# faircamp-fork

./: .gitignore  ALTERNATIVES.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CREDITS.md  Cargo.toml  README.md  build.rs  flake.nix  issue_template.md  issue_template.md.license
enolib/: Cargo.toml
enolib/src/: document.rs  lib.rs  parse.rs  test.rs
manual/: Cargo.toml  README.md  build.rs  index.md
manual/assets/: styles.css
manual/examples/: 01 Artist (Free Downloads).md  01 Free Metal.md  02 Artist (Soft Paycurtain).md  02 Electric Curtain.md  03 Artist (Download Codes).md  03 Say the Magic Word.md  04 Label.md
manual/reference/: 01 Artists (artist.eno).md  01 Catalog.md  02 Catalog (catalog.eno).md  02 Releases.md  03 Artists.md  03 Releases (release.eno).md  04 Downloads.md  04 Tracks (track.eno).md  05 Theme.md
manual/src/: main.rs
manual/topics/: 01 Installation.md  03 Manifests.md  04 Command-line Arguments.md  04 Linking to timecodes<U+002F>tracks.md  08 Tags.md
src/: archives.rs  args.rs  artist.rs  asset.rs  asset_cache.rs  audio_format.rs  audio_meta.rs  build.rs  build_settings.rs  cache.rs  catalog.rs  cover_generator.rs  css.rs  debug.rs  decode.rs  deploy.rs  download_format.rs  download_formats.rs  download_option.rs  downloads.rs  eno.rs  fair_dir.rs  favicon.rs  feed.rs  feeds.rs  ffmpeg.rs  heuristic_audio_meta.rs  icons.rs  image.rs  image_format.rs  image_processor.rs  link.rs  locale.rs  localization.rs  m3u.rs  main.rs  manifest.rs  markdown.rs  message.rs  meta.rs  (+21 more)
src/assets/: browser.js  embeds.css  embeds.js  layout.html  missing_image_descriptions.css  player.js  player.js.license  scripts.js  scripts.js.license  site.css  site.css.license  site.js  styles.css  theming_widget.css  theming_widget.js
src/audio_meta/: aiff.rs  alac.rs  flac.rs  id3_util.rs  mp3.rs  ogg_vorbis.rs  opus.rs  wav.rs
src/decode/: aiff.rs  alac.rs  flac.rs  mp3.rs  ogg_vorbis.rs  opus.rs  wav.rs
src/feeds/: atom.rs  generic_rss.rs  media_rss.rs  podcast_rss.rs  rss.rs
src/icons/: feed.svg.license  pause.svg.license
src/image/: feed.rs
src/image_processor/: image.rs  libvips.rs
src/locale/: de.rs  en.rs  es.rs  fr.rs  he.rs  it.rs  nb.rs  nl.rs  pl.rs  sv.rs  tr.rs  translations.rs  uk.rs
src/manifest/: artist.rs  artist_catalog_release.rs  artist_catalog_release_track.rs  artist_release.rs  catalog.rs  catalog_release.rs  obsolete.rs  release.rs
src/manual/: fira-mono-v14-latin_latin-ext-regular.woff2.license  index.md  styles.css
src/manual/examples/: 01 Free Metal.md  02 Electric Curtain.md  03 Say the Magic Word.md
src/manual/reference/: 01 Catalog.md  02 Releases.md  03 Artists.md  04 Streaming.md  05 Downloads.md  06 Payment.md  06 Theme.md  07 Embedding.md  07 Theme.md  08 Cache.md  08 Theme.md  09 Localization.md  10 Cache.md
src/manual/topics/: 01 Installation.md  02 Getting Started.md  02 Usage.md  03 Manifests.md  04 Command-line Arguments.md  05 Similar Projects.md  05 Supported Formats.md  06 Concepts Explained.md  07 Going Online.md  08 Tags.md
src/render/: about.rs  artist.rs  embed_layout.rs  embed_release.rs  embed_track.rs  image_descriptions.rs  index.rs  layout.rs  release.rs  release_download.rs  release_embed.rs  release_embed_codes.rs  release_purchase.rs  release_unlock.rs  releases.rs  subscribe.rs  track.rs  track_download.rs  track_embed.rs  track_embed_codes.rs  track_purchase.rs  track_unlock.rs
src/render/release/: checkout.rs  download.rs  embed.rs  purchase.rs  unlock.rs
src/scripts/: browser.rs
src/templates/: embed.html  embed.html.license  layout.html  layout.html.license  share_widget.html  theming_widget.html  theming_widget.html.license
src/templates/feed/: channel.xml  image.xml  image.xml.license  item.xml
src/theme/: black.rs  black_alternate.rs  dark.rs  light.rs  white.rs  white_alternate.rs
translations/: Cargo.toml
translations/assets/: scripts.js  styles.css
translations/src/: ca.rs  de.rs  en.rs  es.rs  fr.rs  he.rs  it.rs  ja.rs  lib.rs  lt.rs  nb.rs  new.rs  nl.rs  pl.rs  pt_pt.rs  ru.rs  sr_cyrl.rs  sr_latn.rs  sv.rs  tr.rs  uk.rs  zh_hans_cn.rs  zh_hant_tw.rs
