# SPDX-FileCopyrightText: 2021-2024 Simon Repp
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
authors = ["Simon Repp"]
edition = "2021"
name = "faircamp"
version = "0.15.0"

[build-dependencies]
enolib = { git = "https://codeberg.org/simonrepp/enolib-rs", tag = "0.4.2" }
indoc = "2.0.5"
pulldown-cmark = { default-features = false, features = ["html", "simd"], version = "0.11.0" }
slug = "0.1.5"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.8.0"
alac = "0.5.0"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { features = ["serde"], version = "0.4.38" }
clap = { features = ["derive"], version = "4.5.8" }
claxon = "0.4.3"
enolib = { git = "https://codeberg.org/simonrepp/enolib-rs", tag = "0.4.2" }
hound = "3.5.1"
id3 = "1.14.0"
image = { optional = true, version = "0.25.1" }
indoc = "2.0.5"
iso_currency = "0.4.4"
lewton = "0.10.2"
libvips = { optional = true, version = "1.5.1" }
metaflac = "0.2.7"
mp4parse = "0.17.0"
nanoid = "0.4.0"
ogg = "0.9.1"
opus = "0.3.0"
opus_headers = "0.1.2"
pacmog = "0.4.1"
pulldown-cmark = { default-features = false, features = ["html", "simd"], version = "0.11.0" }
rmp3 = { features = ["float", "simd"], version = "0.3.1" }
sanitize-filename = "0.5.0"
seahash = "4.1.0"
serde = "1.0.203"
serde_derive = "1.0.203"
slug = "0.1.5"
tokio = { features = ["macros", "rt-multi-thread"], version = "1.38.0" }
url = "2.5.2"
urlencoding = "2.1.3"
webbrowser = "1.0.1"
zip = { features = ["deflate"], version = "2.1.3" }

[features]
image = ["dep:image"]
libvips = ["dep:libvips"]
